--- a/quantum-doctor-next-main/.env
+++ b/quantum-doctor-next-main/.env
@@ -27,3 +27,8 @@ OPENAI_API_KEY=your-openai-api-key
 FLW_PUBLIC_KEY=your-flutterwave-public-key
 FLW_SECRET_KEY=your-flutterwave-secret-key
 LOGO_URL=https://your-app-logo-url.com/logo.png
+
+# Next
+NEXT_PUBLIC_API_URL=http://localhost:8000
+NEXT_PUBLIC_SITE_URL=http://localhost:3000
+NEXT_PUBLIC_WS_URL=ws://localhost:8000/ws
