--- a/quantum-doctor-next-main/package.json
+++ b/quantum-doctor-next-main/package.json
@@ -28,12 +28,14 @@
         "@radix-ui/react-slot": "^1.1.0",
         "@radix-ui/react-switch": "^1.1.1",
         "@radix-ui/react-tabs": "^1.1.1",
+        "@radix-ui/react-toast": "^1.2.6",
         "@radix-ui/react-toggle": "^1.1.0",
         "@radix-ui/react-toggle-group": "^1.1.0",
         "@radix-ui/react-tooltip": "^1.1.3",
         "@tailwindcss/forms": "^0.5.9",
         "@tailwindcss/typography": "^0.5.15",
         "autoprefixer": "^10.4.20",
+        "axios": "^1.7.9",
         "bcryptjs": "^3.0.0",
         "chart.js": "^4.4.6",
         "class-variance-authority": "^0.7.0",
@@ -63,7 +65,7 @@
         "react-day-picker": "^8.10.1",
         "react-dom": "^18",
         "recharts": "^2.13.2",
-        "sonner": "^1.5.0",
+        "sonner": "^1.7.4",
         "tailwind-merge": "^2.5.4",
         "tailwindcss-animate": "^1.0.7",
         "uuid": "^11.0.5",
