--- a/quantum-doctor-next-main/.env
+++ b/quantum-doctor-next-main/.env
@@ -1,21 +1,16 @@
-# MongoDB
-MONGODB_URI=mongodb+srv://quantum10:xUGHgKHPAXadGNXw@cluster0.lhcbibl.mongodb.net/quantum?retryWrites=true&w=majority&appName=Cluster0
+# Database
+MONGODB_URI=mongodb://localhost:27017/quantum-doctor
 
 # JWT
 JWT_SECRET=your-jwt-secret-key
 REFRESH_TOKEN_SECRET=your-refresh-token-secret-key
-
-# Cloudinary
-CLOUDINARY_CLOUD_NAME=your-cloud-name
-CLOUDINARY_API_KEY=your-api-key
-CLOUDINARY_API_SECRET=your-api-secret
 
 # SMTP
 SMTP_HOST=smtp.example.com
 SMTP_PORT=587
 SMTP_USER=your-smtp-user
 SMTP_PASS=your-smtp-password
-SMTP_FROM=noreply@example.com
+SMTP_FROM=no-reply@quantum-doctor.com
 
 # Frontend
 FRONTEND_URL=http://localhost:3000
@@ -23,12 +18,12 @@ FRONTEND_URL=http://localhost:3000
 # OpenAI
 OPENAI_API_KEY=your-openai-api-key
 
-# Flutterwave
-FLW_PUBLIC_KEY=your-flutterwave-public-key
-FLW_SECRET_KEY=your-flutterwave-secret-key
-LOGO_URL=https://your-app-logo-url.com/logo.png
+# Cloudinary
+CLOUDINARY_CLOUD_NAME=your-cloud-name
+CLOUDINARY_API_KEY=your-api-key
+CLOUDINARY_API_SECRET=your-api-secret
 
 # Next
-NEXT_PUBLIC_API_URL=http://localhost:8000
+NEXT_PUBLIC_API_URL=http://localhost:3000
 NEXT_PUBLIC_SITE_URL=http://localhost:3000
 NEXT_PUBLIC_WS_URL=ws://localhost:8000/ws
