--- a/quantum-doctor-next-main/package.json
+++ b/quantum-doctor-next-main/package.json
@@ -34,6 +34,7 @@
         "@radix-ui/react-tooltip": "^1.1.3",
         "@tailwindcss/forms": "^0.5.9",
         "@tailwindcss/typography": "^0.5.15",
+        "@types/jsonwebtoken": "^9.0.8",
         "autoprefixer": "^10.4.20",
         "axios": "^1.7.9",
         "bcryptjs": "^3.0.0",
@@ -52,9 +53,10 @@
         "jsonwebtoken": "^9.0.2",
         "lottie-react": "^2.4.0",
         "lucide-react": "^0.454.0",
-        "mongoose": "^8.10.0",
+        "mongoose": "^8.10.1",
         "multer": "^1.4.5-lts.1",
         "next": "14.2.3",
+        "next-auth": "^4.24.11",
         "next-themes": "^0.3.0",
         "node-fetch": "^3.3.2",
         "nodemailer": "^6.10.0",
