correct the mongo uri

--- a/quantum-doctor-next-main/.env
+++ b/quantum-doctor-next-main/.env
@@ -1,5 +1,5 @@
 # Database
-MONGODB_URI=mongodb://localhost:27017/quantum-doctor
+MONGODB_URI=mongodb+srv://quantum10:xUGHgKHPAXadGNXw@cluster0.lhcbibl.mongodb.net/quantum?retryWrites=true&w=majority&appName=Cluster0
 
 # JWT
 JWT_SECRET=your-jwt-secret-key
